# ferrvoicing

./: next.config.ts  package.json  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  app_data.db  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: company.rs  invoice.rs  mod.rs  user.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/schema/: company.sql  invoice.sql  profile.sql  user.sql
src-tauri/src/models/: company.rs  invoice.rs  mod.rs  user.rs
src-tauri/src/user/: mod.rs
src-tauri/src/utils/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(protected)/: layout.tsx
src/app/(protected)/invoice/[id]/: page.tsx
src/app/(protected)/invoices/: page.tsx
src/app/(protected)/profile/: page.tsx
src/app/(protected)/settings/: page.tsx
src/app/clients/: page.tsx
src/app/invoice/[id]/: page.tsx
src/app/login/: page.tsx
src/app/onboarding/: page.tsx
src/app/signup/: page.tsx
src/components/: add-client-dialog.tsx  app-sidebar.tsx  client-management.tsx  create-document-dialog.tsx  delete-client-dialog.tsx  edit-client-dialog.tsx  invoice-print.tsx  invoice-tabs.tsx  nav-main.tsx  nav-user.tsx
src/components/auth/: auth-guard.tsx  login-form.tsx  signup-form.tsx
src/components/onboarding/: onboarding-form.tsx
src/components/profile/: profile-form.tsx
