[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
rusqlite = { version = "0.36", features = ["bundled"] }
uuid = {version = "1.17.0", features = ["v4"] }
once_cell = "1.21.3"
sha2 = "0.10.9"
reqwest = {version = "0.12.22", features = ["json", "blocking", "multipart"]}
urlencoding = "2.1.3"
tauri-plugin-shell = "2"
md5 = "0.8.0"
chrono = "0.4.41"

